commit hdr/nav section

--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@
 </head>
 <body>
 
-  Features
-  Pricing
-  Resources
+<header>
+        <nav class="nav container">
+            <div class="nav-left">
+                <h2 class="logo">Shortly</h2>
+                <a href="#">Features</a>
+                <a href="#">Pricing</a>
+                <a href="#">Resources</a>
+            </div>
 
-  Login
-  Sign Up
+            <div class="nav-right">
+                <a href="#">Login</a>
+                <!--<a href="#" class="btn signup">Sign Up</a>-->
+                <button class="signup-btn">Sign Up</button>
+            </div>
+
+        </nav>
+    </header>
+
 
   More than just shorter links
 
