commit hero and shorten sections layout

--- a/index.html
+++ b/index.html
@@ -34,17 +34,25 @@
         </nav>
     </header>
 
+    <section class="hero container">
+        <div class="hero-text">
+            <h1 id="hero-message">More than just shorter links</h1>
+            <p class="hero-paragraphs">Build your brand’s recognition and get detailed insights
+                on how your links are performing.</p>
+            <button class="shortener-btn">Get Started</button>
+        </div>
+        <div class="hero-image">
+            <img src="https://via.placeholder.com/600x400" alt="Illustration">
+        </div>
+    </section>
 
-  More than just shorter links
+    <section class="shorten-section">
+        <div class="shorten-box container">
+            <input type="text" placehoder="Shorten a link here...">
+            <button class="btn primary">Shorten It!</button> 
+        </div>
+    </section>
 
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
-
-  Get Started
-  
-  Shorten a link here...
-
-  Shorten It!
 
   Advanced Statistics
 
