--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
+
 <body>
 
-<header>
+    <header>
         <nav class="nav container">
             <div class="nav-left">
                 <h2 class="logo">Shortly</h2>
@@ -49,57 +58,84 @@
     <section class="shorten-section">
         <div class="shorten-box container">
             <input type="text" placehoder="Shorten a link here...">
-            <button class="btn primary">Shorten It!</button> 
+            <button class="btn primary">Shorten It!</button>
         </div>
     </section>
 
+    <section class="stats container">
+        <h2>Advanced Statistics</h2>
+        <p class="stats-text">
+            Track how your links are performing across the web with our advanced statistics dashboard.
+        </p>
 
-  Advanced Statistics
+        <div class="cards">
+            <div class="card">
+                <div class="icon"></div>
+                <h3>Brand Recognition</h3>
+                <p>
+                    Boost your brand recognition with each click. Generic links don’t
+                    mean a thing. Branded links help instil confidence in your content.
+                </p>
+            </div>
 
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
+            <div class="card">
+                <div class="icon"></div>
+                <h3>Detailed Records</h3>
+                <p>
+                    Gain insights into who is clicking your links. Knowing when and where
+                    people engage with your content helps inform better decisions.
+                </p>
+            </div>
 
-  Brand Recognition
+            <div class="card">
+                <div class="icon"></div>
+                <h3>Fully Customizable</h3>
+                <p>
+                    Improve brand awareness and content discoverability through customizable
+                    links, supercharging audience engagement.
+                </p>
+            </div>
+        </div>
 
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
 
-  Detailed Records
 
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
 
-  Fully Customizable
+    </section>
 
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
 
-  Boost your links today
 
-  Get Started
 
-  Features
 
-  Link Shortening
-  Branded Links
-  Analytics
 
-  Resources
 
-  Blog
-  Developers
-  Support
 
-  Company
+    Boost your links today
 
-  About
-  Our Team
-  Careers
-  Contact
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Get Started
+
+    Features
+
+    Link Shortening
+    Branded Links
+    Analytics
+
+    Resources
+
+    Blog
+    Developers
+    Support
+
+    Company
+
+    About
+    Our Team
+    Careers
+    Contact
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+    </div>
 </body>
+
 </html>
