--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="nav-right">
                 <a href="#">Login</a>
                 <!--<a href="#" class="btn signup">Sign Up</a>-->
-                <button class="signup-btn">Sign Up</button>
+                <button class="btn signup">Sign Up</button>
             </div>
 
         </nav>
@@ -46,9 +46,10 @@
     <section class="hero container">
         <div class="hero-text">
             <h1 id="hero-message">More than just shorter links</h1>
-            <p class="hero-paragraphs">Build your brand’s recognition and get detailed insights
-                on how your links are performing.</p>
-            <button class="shortener-btn">Get Started</button>
+            <p class="hero-paragraphs">
+                Build your brand’s recognition and get detailed insightson how your links are performing.
+            </p>
+            <button class="btn primary">Get Started</button>
         </div>
         <div class="hero-image">
             <img src="https://via.placeholder.com/600x400" alt="Illustration">
@@ -96,45 +97,44 @@
                 </p>
             </div>
         </div>
-
-
-
-
     </section>
 
+    <section class="cta">
+        <h2>Boost your links today</h2>
+        <button class="btn primary">Get Started</button>
+    </section>
 
+    <footer>
+        <div class="container footer">
+            <h2 class="logo">Shortly</h2>
 
+            <div>
+            <h4>Features</h4>
+            <a href="#">Link Shortening</a>
+            <a href="#">Branded Links</a>
+            <a href="#">Analytics</a>
+            </div>
 
+            <div>
+            <h4>Resources</h4>
+            <a href="#">Blog</a>
+            <a href="#">Developers</a>
+            <a href="#">Support</a>
+            </div>
 
-
-
-
-    Boost your links today
-
-    Get Started
-
-    Features
-
-    Link Shortening
-    Branded Links
-    Analytics
-
-    Resources
-
-    Blog
-    Developers
-    Support
-
-    Company
-
-    About
-    Our Team
-    Careers
-    Contact
+            <div>
+            <h4>Company</h4>
+            <a href="#">About</a>
+            <a href="#">Our Team</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+            </div>
+        </div>
+    </footer>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Rod Gaitan</a>.
     </div>
 </body>
 
