commit styling of header and hero sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+    <!---being used as a pre-caution only, since I anticipate issues when publishing my project off of GitHub via Netlify-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--initially the only import method for Google font considered -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+
+
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -28,7 +37,7 @@
     <header>
         <nav class="nav container">
             <div class="nav-left">
-                <h2 class="logo">Shortly</h2>
+                <h2 class="logo">Shortly</h2> <!-- I believe there is an image for this come back-->
                 <a href="#">Features</a>
                 <a href="#">Pricing</a>
                 <a href="#">Resources</a>
@@ -52,7 +61,9 @@
             <button class="btn primary">Get Started</button>
         </div>
         <div class="hero-image">
-            <img src="https://via.placeholder.com/600x400" alt="Illustration">
+            <!--<img src="https://via.placeholder.com/600x400" alt="Illustration">-->
+            <img src="./images/illustration-working.svg" alt="Illustration">
+
         </div>
     </section>
 
@@ -109,25 +120,25 @@
             <h2 class="logo">Shortly</h2>
 
             <div>
-            <h4>Features</h4>
-            <a href="#">Link Shortening</a>
-            <a href="#">Branded Links</a>
-            <a href="#">Analytics</a>
+                <h4>Features</h4>
+                <a href="#">Link Shortening</a>
+                <a href="#">Branded Links</a>
+                <a href="#">Analytics</a>
             </div>
 
             <div>
-            <h4>Resources</h4>
-            <a href="#">Blog</a>
-            <a href="#">Developers</a>
-            <a href="#">Support</a>
+                <h4>Resources</h4>
+                <a href="#">Blog</a>
+                <a href="#">Developers</a>
+                <a href="#">Support</a>
             </div>
 
             <div>
-            <h4>Company</h4>
-            <a href="#">About</a>
-            <a href="#">Our Team</a>
-            <a href="#">Careers</a>
-            <a href="#">Contact</a>
+                <h4>Company</h4>
+                <a href="#">About</a>
+                <a href="#">Our Team</a>
+                <a href="#">Careers</a>
+                <a href="#">Contact</a>
             </div>
         </div>
     </footer>
