--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="hero-image">
             <!--<img src="https://via.placeholder.com/600x400" alt="Illustration">-->
-            <img src="./images/illustration-working.svg" alt="Illustration">
+            <img src="./images/illustration-working.svg" alt="Illustration of a cartoon-like figure sitting at her desk at the office working on her computer">
 
         </div>
     </section>
@@ -82,7 +82,7 @@
 
         <div class="cards">
             <div class="card">
-                <div class="icon"></div>
+                <div class="icon"> <img src="./images/icon-brand-recognition.svg" alt="tiny icon of a bar chart"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
                 <h3>Brand Recognition</h3>
                 <p>
                     Boost your brand recognition with each click. Generic links don’t
@@ -91,7 +91,7 @@
             </div>
 
             <div class="card">
-                <div class="icon"></div>
+                <div class="icon"> <img src="./images/icon-detailed-records.svg" alt="tiny icon of a speedometer"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
                 <h3>Detailed Records</h3>
                 <p>
                     Gain insights into who is clicking your links. Knowing when and where
@@ -100,7 +100,7 @@
             </div>
 
             <div class="card">
-                <div class="icon"></div>
+                <div class="icon"> <img src="./images/icon-fully-customizable.svg" alt="tiny icon of artistic paint tools"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
                 <h3>Fully Customizable</h3>
                 <p>
                     Improve brand awareness and content discoverability through customizable
