commit completion of style phase

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <section class="shorten-section">
         <div class="shorten-box container">
-            <input type="text" placehoder="Shorten a link here...">
+            <input type="text" placeholder="Shorten a link here...">
             <button class="btn primary">Shorten It!</button>
         </div>
     </section>
@@ -110,7 +110,7 @@
         </div>
     </section>
 
-    <section class="cta">
+    <section class="boost">
         <h2>Boost your links today</h2>
         <button class="btn primary">Get Started</button>
     </section>
@@ -119,27 +119,35 @@
         <div class="container footer">
             <h2 class="logo">Shortly</h2>
 
-            <div>
+            <div class="footer-nav">
                 <h4>Features</h4>
                 <a href="#">Link Shortening</a>
                 <a href="#">Branded Links</a>
                 <a href="#">Analytics</a>
             </div>
 
-            <div>
+            <div class="footer-nav">
                 <h4>Resources</h4>
                 <a href="#">Blog</a>
                 <a href="#">Developers</a>
                 <a href="#">Support</a>
             </div>
 
-            <div>
+            <div class="footer-nav">
                 <h4>Company</h4>
                 <a href="#">About</a>
                 <a href="#">Our Team</a>
                 <a href="#">Careers</a>
                 <a href="#">Contact</a>
             </div>
+
+            <div class="social-icons">
+            <img src="./images/icon-facebook.svg" alt="clickable social media icon to share expriences on Facebook.">
+            <img src="./images/icon-twitter.svg" alt="clickable social media icon to share expriences on Twitter.">
+            <img src="./images/icon-instagram.svg" alt="clickable social media icon to share expriences on Instagram.">
+            <img src="./images/icon-pinterest.svg" alt="clickable social media icon to share expriences on Pinterest.">
+             </div>
+        </div>
         </div>
     </footer>
 
