commit completion of project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <!-- Feel free to remove these styles or customise in your own stylesheet -->
     <style>
         .attribution {
             font-size: 11px;
@@ -36,20 +36,18 @@
 
     <header>
         <!--<nav class="nav container">-->
-            <nav class="nav container" aria-label="Main navigation">
+        <nav class="nav container" aria-label="Main navigation">
             <div class="nav-left">
-                <h2 class="logo">Shortly</h2> <!-- I believe there is an image for this come back-->
+                <img src="./images/logo.svg" alt="Illustration of 'Shortly' logo">
                 <a href="#">Features</a>
                 <a href="#">Pricing</a>
                 <a href="#">Resources</a>
             </div>
-
             <div class="nav-right">
                 <a href="#">Login</a>
                 <!--<a href="#" class="btn signup">Sign Up</a>-->
                 <button class="btn signup">Sign Up</button>
             </div>
-
         </nav>
     </header>
 
@@ -63,8 +61,8 @@
         </div>
         <div class="hero-image">
             <!--<img src="https://via.placeholder.com/600x400" alt="Illustration">-->
-            <img src="./images/illustration-working.svg" alt="Illustration of a cartoon-like figure sitting at her desk at the office working on her computer">
-
+            <img src="./images/illustration-working.svg"
+                alt="Illustration of a cartoon-like figure sitting at her desk at the office working on her computer">
         </div>
     </section>
 
@@ -76,19 +74,12 @@
             <button class="btn primary" id="short-btn">Shorten It!</button>
         </div>
     </section>
-	
 
-  <!--  <section class="links-container">
-    Shortened links will appear here 
-   </section> -->
-
-<section class="links">
-   <div class="links-container">
-    Shortened links will appear here 
-   </div>
- </section>
-
-
+    <section class="links">
+        <div class="links-container">
+            Shortened links will appear here
+        </div>
+    </section>
 
     <section class="stats container">
         <h2>Advanced Statistics</h2>
@@ -98,7 +89,8 @@
 
         <div class="cards">
             <div class="card">
-                <div class="icon"> <img src="./images/icon-brand-recognition.svg" alt="tiny icon of a bar chart"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
+                <div class="icon"> <img src="./images/icon-brand-recognition.svg" alt="tiny icon of a bar chart"></div>
+                <!--images faield to load at 1st, bc missing '.' bfore '/'-->
                 <h3>Brand Recognition</h3>
                 <p>
                     Boost your brand recognition with each click. Generic links don’t
@@ -107,7 +99,8 @@
             </div>
 
             <div class="card">
-                <div class="icon"> <img src="./images/icon-detailed-records.svg" alt="tiny icon of a speedometer"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
+                <div class="icon"> <img src="./images/icon-detailed-records.svg" alt="tiny icon of a speedometer"></div>
+                <!--images faield to load at 1st, bc missing '.' bfore '/'-->
                 <h3>Detailed Records</h3>
                 <p>
                     Gain insights into who is clicking your links. Knowing when and where
@@ -116,7 +109,9 @@
             </div>
 
             <div class="card">
-                <div class="icon"> <img src="./images/icon-fully-customizable.svg" alt="tiny icon of artistic paint tools"></div> <!--images faield to load at 1st, bc missing '.' bfore '/'-->
+                <div class="icon"> <img src="./images/icon-fully-customizable.svg"
+                        alt="tiny icon of artistic paint tools"></div>
+                <!--images faield to load at 1st, bc missing '.' before '/'-->
                 <h3>Fully Customizable</h3>
                 <p>
                     Improve brand awareness and content discoverability through customizable
@@ -158,18 +153,22 @@
             </div>
 
             <div class="social-icons">
-            <a href="https://www.facebook.com/" aria-label="Facebook"><img src="./images/icon-facebook.svg" alt="clickable social media icon to share expriences on Facebook."></a>
-            <a href="https://x.com/" aria-label="Twitter"><img src="./images/icon-twitter.svg" alt="clickable social media icon to share expriences on Twitter."></a>
-            <a href="https://www.instagram.com/" aria-label="Instagram"><img src="./images/icon-instagram.svg" alt="clickable social media icon to share expriences on Instagram."></a>
-            <a href="https://www.pinterest.com/" aria-label="Pinterest"><img src="./images/icon-pinterest.svg" alt="clickable social media icon to share expriences on Pinterest."></a>
-             </div>
+                <a href="https://www.facebook.com/" aria-label="Facebook"><img src="./images/icon-facebook.svg"
+                        alt="clickable social media icon to share expriences on Facebook."></a>
+                <a href="https://x.com/" aria-label="Twitter"><img src="./images/icon-twitter.svg"
+                        alt="clickable social media icon to share expriences on Twitter."></a>
+                <a href="https://www.instagram.com/" aria-label="Instagram"><img src="./images/icon-instagram.svg"
+                        alt="clickable social media icon to share expriences on Instagram."></a>
+                <a href="https://www.pinterest.com/" aria-label="Pinterest"><img src="./images/icon-pinterest.svg"
+                        alt="clickable social media icon to share expriences on Pinterest."></a>
+            </div>
         </div>
         </div>
     </footer>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">[Name]</a>.
+        Coded by <a href="#">Rod Gaitan</a>.
     </div>
     <script type="module" src="index.js"></script>
 </body>
